--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,16 @@
 body{
 
-    background-image: url("background9.jpg"); 
+    background-image: url('background9.jpg'); 
     background-attachment: fixed; 
     background-size: cover; 
     background-position: top; 
     background-repeat: no-repeat;
+}
+section{
+    padding: 50px;  
+    background-color: rgba(4, 4, 17, 0.863);
+    width: 1200px;
+    border-radius: 15px; 
+    margin-left: auto; 
+    margin-right: auto;
 }
