grágico resolvido e média

--- a/css/index.css
+++ b/css/index.css
@@ -22,3 +22,11 @@ section#grafico{
     margin-left: auto; 
     margin-right: auto;
 }
+section#medidas{
+    padding: 20px;  
+    background-color: rgba(4, 4, 17, 0.863);
+    width: 750px;
+    border-radius: 15px; 
+    margin-left: auto; 
+    margin-right: auto;
+}
