--- a/css/index.css
+++ b/css/index.css
@@ -30,3 +30,11 @@ section#medidas{
     margin-left: auto; 
     margin-right: auto;
 }
+section#selOrd{
+    padding: 20px;  
+    background-color: rgba(4, 4, 17, 0.863);
+    width: 750px;
+    border-radius: 15px; 
+    margin-left: auto; 
+    margin-right: auto;
+}
